加入生命靈數作業

--- a/WinFormsApp1/homework005Star.csproj
+++ b/WinFormsApp1/homework005Star.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Linq.AsyncEnumerable" Version="10.0.0-rc.2.25502.107" />
+  </ItemGroup>
 
 </Project>
